--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,31 +1,31 @@
----
-!binary "YmxvY2toZWFkZXIucG5n": blockheader-a5974b67338f838f377dcc9486d54a0b.png
-!binary "YnV0dG9uLnBuZw==": button-39f196ecfc57426bcce36f7a2f42d977.png
-!binary "Zm9vdGVyX2IucG5n": footer_b-c93763cf376fce9f06fa73e8474cf979.png
-!binary "Zm9vdGVyX3MucG5n": footer_s-8c4e7f3806e3bd3673511434d448eede.png
-!binary "Zm9vdGVyX3QucG5n": footer_t-d2ddff2245daca2e025145990b631645.png
-!binary "aGVhZGVyLmpwZw==": header-7965b9ebf6e5f9a721bc541eefac1b4a.jpg
-!binary "aGVhZGVyLnBuZw==": header-2a3c09bbf2e839f3e8d760d4de05325f.png
-!binary "bWVudWl0ZW0ucG5n": menuitem-e5995cd3207bf1e42947bb94b809160c.png
-!binary "bWVudXNlcGFyYXRvci5wbmc=": menuseparator-c9eb3dca1d25f53be7c029cb6c09a061.png
-!binary "cG9zdF9jLnBuZw==": post_c-d24cd96fe888b97ce87e403608555416.png
-!binary "cG9zdF9oLnBuZw==": post_h-c21f63820ac24d8dff97e365fc05ffa6.png
-!binary "cG9zdF9zLnBuZw==": post_s-743eff62088ee20494ac3f88ba1f014c.png
-!binary "cG9zdF92LnBuZw==": post_v-8b6aeeccc6a94502466c8701d9090639.png
-!binary "cG9zdGJ1bGxldHMucG5n": postbullets-7491cc5d85a64852ac612f476d3bb428.png
-!binary "cG9zdGhlYWRlcmljb24ucG5n": postheadericon-3b5e27586ad45992829f73f54e091b72.png
-!binary "cG9zdHF1b3RlLnBuZw==": postquote-6408859f603bb526e5f6cd602257113b.png
-!binary "cHJldmlldy5qcGc=": preview-359682e6081313803d986de0b300a6b1.jpg
-!binary "cmFpbHMucG5n": rails-e4b51606cd77fda2615e7439907bfc92.png
-!binary "cnNzaWNvbi5wbmc=": rssicon-e94857759bddebfa1fbaea2e6ac193a1.png
-!binary "c2hlZXRfaC5wbmc=": sheet_h-5790b956009286528e71e4bd03a094b0.png
-!binary "c2hlZXRfcy5wbmc=": sheet_s-1a01b741437f35df9b1122a9803ff0d3.png
-!binary "c2hlZXRfdi5wbmc=": sheet_v-a55de2ef95e16fb832ff42eb192492c2.png
-!binary "c3BhY2VyLmdpZg==": spacer-abe4466721920bfb910c03b38e506601.gif
-!binary "c3ViaXRlbS5wbmc=": subitem-c66e43273e4a638fa3894820e64b132d.png
-!binary "YXBwbGljYXRpb24uanM=": application-dd5d6efacf69d73b056b26d653cfae5e.js
-!binary "anF1ZXJ5Lmpz": jquery-cd0c322ff5a2fb5487fa33de00737b42.js
-!binary "cmFpbHMuanM=": rails-5ac455321f59b229cedb6f2fe5e7eb8d.js
-!binary "c2NyaXB0Lmpz": script-d3c6a81f5e970ea34fa3787efda3eaf3.js
-!binary "YXBwbGljYXRpb24uY3Nz": application-ed7e64aa4e2188bf392a53a69977a557.css
-!binary "c3R5bGUuY3Nz": style-0fa1b66680d20246d20b8c4573951781.css
+--- 
+menuseparator.png: menuseparator-c9eb3dca1d25f53be7c029cb6c09a061.png
+footer_s.png: footer_s-8c4e7f3806e3bd3673511434d448eede.png
+spacer.gif: spacer-abe4466721920bfb910c03b38e506601.gif
+header.jpg: header-7965b9ebf6e5f9a721bc541eefac1b4a.jpg
+footer_t.png: footer_t-d2ddff2245daca2e025145990b631645.png
+script.js: script-d3c6a81f5e970ea34fa3787efda3eaf3.js
+subitem.png: subitem-c66e43273e4a638fa3894820e64b132d.png
+sheet_s.png: sheet_s-1a01b741437f35df9b1122a9803ff0d3.png
+sheet_h.png: sheet_h-5790b956009286528e71e4bd03a094b0.png
+postquote.png: postquote-6408859f603bb526e5f6cd602257113b.png
+postheadericon.png: postheadericon-3b5e27586ad45992829f73f54e091b72.png
+postbullets.png: postbullets-7491cc5d85a64852ac612f476d3bb428.png
+button.png: button-39f196ecfc57426bcce36f7a2f42d977.png
+jquery.js: jquery-cd0c322ff5a2fb5487fa33de00737b42.js
+preview.jpg: preview-359682e6081313803d986de0b300a6b1.jpg
+rails.js: rails-5ac455321f59b229cedb6f2fe5e7eb8d.js
+rails.png: rails-e4b51606cd77fda2615e7439907bfc92.png
+post_s.png: post_s-743eff62088ee20494ac3f88ba1f014c.png
+menuitem.png: menuitem-e5995cd3207bf1e42947bb94b809160c.png
+application.css: application-fa896cfbcbc8544c4ca80a0afc9b55cf.css
+post_c.png: post_c-d24cd96fe888b97ce87e403608555416.png
+footer_b.png: footer_b-c93763cf376fce9f06fa73e8474cf979.png
+style.css: style-7073db1c71926a7ff1efe1b6a0899aa6.css
+rssicon.png: rssicon-e94857759bddebfa1fbaea2e6ac193a1.png
+post_h.png: post_h-c21f63820ac24d8dff97e365fc05ffa6.png
+application.js: application-dd5d6efacf69d73b056b26d653cfae5e.js
+post_v.png: post_v-8b6aeeccc6a94502466c8701d9090639.png
+sheet_v.png: sheet_v-a55de2ef95e16fb832ff42eb192492c2.png
+header.png: header-2a3c09bbf2e839f3e8d760d4de05325f.png
+blockheader.png: blockheader-a5974b67338f838f377dcc9486d54a0b.png
